tests/tools/checker/negative/void_let_type.nv
fn main() : void {
    let x : void = 1;
    return;
}
